--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "fd77727f-e163-4941-ad77-cdb117ff60a7",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "[8523 rows x 12 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "dd22757e-6cba-4b4c-a22a-2006dc28277a",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "f3b77fbc-1e04-4369-977d-02c9f0ad60a9",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "7813f49a-6d75-435d-bc4a-00d3adc56356",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "14ae993e-28fa-481e-b428-7c52faaefd29",
    "metadata": {},
    "outputs": [],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "7c5a4440-4d78-4710-8b0c-432c0634ff8d",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "b06c21c8-92f0-480e-9fab-e32bb3ac6b8a",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "3dc4d174-e6e9-4331-afc2-75950056682a",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
     "\n",
     "# Print results\n",
     "for name, metrics in results.items():\n",
-    "    print(f\"{name}: RMSE={metrics['RMSE']:.2f}, R-squared={metrics['R-squared']:.2f}\")"
+    "    print(f\"{name}: RMSE={metrics['RMSE']:.2f}, R-squared={metrics['R-squared']:.2f}\")\n"
    ]
   },
   {
